# android_vendor_qcom_opensource_agm

ipc/DBus/agm_server/: Makefile.am
ipc/HwBinders/agm_ipc_client/: Android.bp  Android.mk
ipc/HwBinders/agm_ipc_service/: Android.bp  Androidmk
ipc/HwBinders/agm_ipc_service/inc/: agm_server_wrapper.h
plugins/tinyalsa/: Android.mk  Makefile.am
plugins/tinyalsa/src/: agm_mixer_plugin.c  agm_pcm_plugin.c
plugins/tinyalsa/test/: Androidmk  Makefile.am  agmmixer.c  backend_conf.xml
service/: Android.bp  Android.mk  Makefile.am
service/inc/private/agm/: session_obj.h
service/src/: agm.c  device.c  graph.c  session_obj.c
snd_parser/: Makefile.am
snd_parser/configs/qcm2290-mtp/: card-defs.xml
